# fastapi-app

./: pyproject.toml
app/: crud.py  database.py  db_models.py  main.py  models.py
