[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Prakash suthar <prakash.suthar24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
pyodbc = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
